# rap-mb

./: .gitignore  CMakeLists.txt  LICENSE  README.md  compile.sh  environment.yml  setup.py
beta/: compile.sh
data/carbon_monoxide/: f_15_z_10_v_fxn_p.npy  f_18_v_1200_z_fxn_p.npy  f_18_v_1500_z_fxn_p.npy  f_18_z_05_v_fxn_p.npy  f_18_z_10_v_fxn_p.npy  p_12e-1_v_1500_f_fxn_z.npy  p_2e-2_v_1200_f_fxn_z.npy  p_2e-2_v_1500_f_fxn_z.npy  p_4e-2_v_1500_f_fxn_z.npy  p_4e-2_v_2000_f_fxn_z.npy
data/methane/: p_2e-1_v_2000_f_fxn_z.npy  p_5e-1_v_2000_f_fxn_z.npy
notebooks/: CO_hitran_data.txt  carbon-monoxide.ipynb  example.ipynb  jcp-methane.ipynb  velocity-distribution.nb
rap_mb/: __init__.py  helpers.py  py_rap_mb.cc  test.cc  test.x
rap_mb/cpp/: CMakeLists.txt  __init__.py  rap_mb.cc
